--- a/render.yaml
+++ b/render.yaml
@@ -27,6 +27,11 @@ services:
         generateValue: true
       - key: SESSION_SECRET
         generateValue: true
+      - key: CLIENT_URL
+        fromService:
+          type: web
+          name: interview-frontend
+          envVarKey: RENDER_EXTERNAL_URL
       - key: LOG_LEVEL
         value: info
       - key: APP_VERSION
@@ -60,7 +65,7 @@ services:
           type: web
           name: interview-backend
           envVarKey: RENDER_EXTERNAL_URL
-        value: /api
+        value: /api/v1
       - key: REACT_APP_ENVIRONMENT
         value: production
 
